--- a/customer.html
+++ b/customer.html
@@ -1,7 +1,14 @@
 <html>
     <head>
-        <body>
-            Test Page Customer
-        </body>
+        <title>Page Title</title>
     </head>
+<body>
+
+<h1>Hello World</h1>
+<p>Test Page customer</p>
+
+<h2>✨Test Pic</h2>
+<img src="https://lh3.googleusercontent.com/ld18GJXADCbavL_oI2ACOisHdbUH2ywgftqQpwg0187dObpvdTX_glUKfGTC65ISM8xZkzykYnXhtEx_KwjevVrArO1n1UjFrQ=w1200-h630-rj-pp-e365" width="811" height="425">
+
+</body>
 </html>
