--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
+<!DOCTYPE html>
 <html>
     <head>
         <body>
             Hello Minnie 
             Test Test Test
+            <h1>Size Text h1</h1>
+            <h2>Size Text h1</h2>
+            <h3>Size Text h1</h3>
+            <h4>Size Text h1</h4>
+            <h5>Size Text h1</h5>
+            <h6>Size Text h1</h6>
+
+            <p>This is a paragraph.</p>
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffavim.com%2Fimage%2F6958470%2F&psig=AOvVaw1B-HJKI3q6f28LasOHslIT&ust=1636608112498000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOjYwdKGjfQCFQAAAAAdAAAAABAD"width="574" height="625">
         </body>
     </head>
 </html>
