--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <h5>Size Text h5</h5>
             <h6>Size Text h6</h6>
 
-            <p>This is a paragraph.</p>
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffavim.com%2Fimage%2F6958470%2F&psig=AOvVaw1B-HJKI3q6f28LasOHslIT&ust=1636608112498000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOjYwdKGjfQCFQAAAAAdAAAAABAD" width="574" height="625">
+            <p>This is a paragraph</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZtVF0UwSxbhVQtci1vzMWPPnWbDJc6n9YyA&usqp=CAU" width="224" height="225">
         </body>
     </head>
 </html>
