--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
             <p>This is a paragraph</p>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZtVF0UwSxbhVQtci1vzMWPPnWbDJc6n9YyA&usqp=CAU" width="224" height="225">
+            <a href="http://google.com">ค้นหาข้อมูล</a>
         </body>
     </head>
 </html>
