--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <h5>Size Text h5</h5>
             <h6>Size Text h6</h6>
 
-            <p>This is a paragraph</p>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZtVF0UwSxbhVQtci1vzMWPPnWbDJc6n9YyA&usqp=CAU" width="224" height="225">
-            <a href="http://google.com">ค้นหาข้อมูล</a>
+            <p style="font-family:courier;">SHINee</p>
+            <a style="color:#AAF3A7;" href="https://th.wikipedia.org/wiki/%E0%B8%8A%E0%B8%B2%E0%B8%A2%E0%B8%99%E0%B8%B5">SHINee  Click!!!</a>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZtVF0UwSxbhVQtci1vzMWPPnWbDJc6n9YyA&usqp=CAU" width="224" height="225"> 
         </body>
     </head>
 </html>
